--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,7 @@ build:
     python: '3.9'
 sphinx:
   fail_on_warning: true # do not change or you will be fired
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
 python:
   install:
   - method: pip
