--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,3 @@
-sphinx-markdown-tables
-sphinx_rtd_theme
-recommonmark
+sphinx-markdown-tables==0.0.17
+sphinx_rtd_theme==3.0.1
+recommonmark==0.7.1
